docs/reference/v1.1/peripheralinterfaces.rst
Peripheral Interfaces
#####################

LimePSB-RPCM features multiple low speed interfaces like SPI, I2C, UART. LimePSB-RPCM low speed interfaces signal names, I/O standards are listed in table 15.

.. table:: Table 15. CM4 Peripheral interfaces pins

  +---------------+---------------------------+-------------+------------------+-------------------------------------------------------------+
  | **Interface** | **Schematic signal name** | **CM4 pin** | **I/O standard** | **Comment**                                                 |
  +===============+===========================+=============+==================+=============================================================+
  | SPI0          | RPI_SPI0_SCLK             | 38 (GPIO11) | 3.3V             | Serial Clock (CM4 output)                                   |
  |               +---------------------------+-------------+------------------+-------------------------------------------------------------+
  |               | RPI_SPI0_MOSI             | 44 (GPIO10) | 3.3V             | Data (CM4 output)                                           |
  |               +---------------------------+-------------+------------------+-------------------------------------------------------------+
  |               | RPI_SPI0_MISO             | 40 (GPIO9)  | 3.3V             | Data (CM4 input)                                            |
  |               +---------------------------+-------------+------------------+-------------------------------------------------------------+
  |               | RPI_SPI0_SS0              | 39 (GPIO8)  | 3.3V             | IC27 and IC29 DACs SPI slave select (CM4 output)            |
  |               +---------------------------+-------------+------------------+-------------------------------------------------------------+
  |               | RPI_SPI0_SS1              | 37 (GPIO7)  | 3.3V             | IC28 phase detector SPI slave select (CM4 output)           |
  +---------------+---------------------------+-------------+------------------+-------------------------------------------------------------+
  | SPI1          | RPI_SPI1_SCLK             | 25 (GPIO21) | 3.3V             | Serial Clock (CM4 output)                                   |
  |               +---------------------------+-------------+------------------+-------------------------------------------------------------+
  |               | RPI_SPI1_MOSI             | 27 (GPIO20) | 3.3V             | Data (CM4 output)                                           |
  |               +---------------------------+-------------+------------------+-------------------------------------------------------------+
  |               | RPI_SPI1_MISO             | 26 (GPIO19) | 3.3V             | Data (CM4 input)                                            |
  |               +---------------------------+-------------+------------------+-------------------------------------------------------------+
  |               | RPI_SPI1_SS0              | 49 (GPIO18) | 3.3V             | IC8 ADC SPI slave select (CM4 output)                       |
  |               +---------------------------+-------------+------------------+-------------------------------------------------------------+
  |               | RPI_SPI1_SS1              | 50 (GPIO17) | 3.3V             | IC14 AND IC16 Shift registers SPI slave select (CM4 output) |
  +---------------+---------------------------+-------------+------------------+-------------------------------------------------------------+
  | I2C0          | RPI_I2C0_SCL              | 80          | 3.3V             | Serial Clock (CM4 output)                                   |
  |               +---------------------------+-------------+------------------+-------------------------------------------------------------+
  |               | RPI_I2C0_SDA              | 82          | 3.3V             | Data                                                        |
  +---------------+---------------------------+-------------+------------------+-------------------------------------------------------------+
  | UART0         | RPI_UART0_RX              | 51 (GPIO15) | 3.3V             | Data (CM4 input)                                            |
  |               +---------------------------+-------------+------------------+-------------------------------------------------------------+
  |               | RPI_UART0_TX              | 55 (GPIO14) | 3.3V             | Data (CM4 output)                                           |
  +---------------+---------------------------+-------------+------------------+-------------------------------------------------------------+


RPI_I2C0 (FPGA_I2C0) interface devices, addresses and other info are shown in table 16.

.. list-table:: Table 16. RPI_I2C0 interface devices
   :header-rows: 1

   * - RPI_I2C0 slave device
     - Slave device
     - I2C address
     - I/O standard
     - Comment
   * - IC9
     - Temperature sensor
     - 1 0 0 1 0 0 0 RW
     - 3.3V
     - LM75
   * - IC10(default)/IC11
     - EEPROM
     - 1 0 1 0 0 0 0 RW
     - 3.3V
     - CAT24C128WI-GT3/M24128
   * - IC12/IC13
     - secure key storage
     - 1 1 0 0 0 0 0 RW
     - 3.3V
     - ATECC508A
   * - IC15/IC17
     - RTC
     - 1 0 1 0 0 0 1 RW
     - 3.3V
     - PCF85063AT
   * - IC44
     - USB PD controller
     - 0 0 0 1 0 0 0 RW
     - 3.3V
     - CYPD3177-24LQXQT
