docs/reference/v1.3/peripheralinterfaces.rst
Peripheral Interfaces
#####################

LimePSB-RPCM features multiple low speed interfaces like SPI, I2C, UART. LimePSB-RPCM low speed interfaces signal names, I/O standards are listed in table 17.

.. table:: Table 17. CM4/5 low speed interfaces pins

  +-----------+-----------------------+-------------+--------------+-------------------------------------------------------+
  | Interface | Schematic signal name | CM4/5 pin   | I/O standard | Comment                                               |
  +===========+=======================+=============+==============+=======================================================+
  | SPI0      | RPI_SPI0_SCLK         | 38 (GPIO11) | 3.3V         | Serial Clock (CM4/5 output)                           |
  |           +-----------------------+-------------+--------------+-------------------------------------------------------+
  |           | RPI_SPI0_MOSI         | 44 (GPIO10) | 3.3V         | Data (CM4/5 output)                                   |
  |           +-----------------------+-------------+--------------+-------------------------------------------------------+
  |           | RPI_SPI0_MISO         | 40 (GPIO9)  | 3.3V         | Data (CM4/5 input)                                    |
  |           +-----------------------+-------------+--------------+-------------------------------------------------------+
  |           | RPI_SPI0_SS0          | 39 (GPIO8)  | 3.3V         | IC18 FPGA config SPI slave select (CM4/5 output)      |
  |           +-----------------------+-------------+--------------+-------------------------------------------------------+
  |           | RPI_SPI0_SS1          | 37 (GPIO7)  | 3.3V         | IC37 phase detector SPI slave select (CM4/5 output)   |
  |           +-----------------------+-------------+--------------+-------------------------------------------------------+ 
  |           | RFPDA_CONV            | 41 (GPIO25) | 3.3V         | IC72 RF power detector SPI slave select (CM4/5 output)|
  |           +-----------------------+-------------+--------------+-------------------------------------------------------+ 
  |           | RFPDB_CONV            | 24 (GPIO26) | 3.3V         | IC73 RF power detector SPI slave select (CM4/5 output)|
  +-----------+-----------------------+-------------+--------------+-------------------------------------------------------+
  | SPI1      | RPI_SPI1_SCLK         | 25 (GPIO21) | 3.3V         | Serial Clock (CM4/5 output)                           |
  |           +-----------------------+-------------+--------------+-------------------------------------------------------+
  |           | RPI_SPI1_MOSI         | 27 (GPIO20) | 3.3V         | Data (CM4/5 output)                                   |
  |           +-----------------------+-------------+--------------+-------------------------------------------------------+
  |           | RPI_SPI1_MISO         | 26 (GPIO19) | 3.3V         | Data (CM4/5 input)                                    |
  |           +-----------------------+-------------+--------------+-------------------------------------------------------+
  |           | RPI_SPI1_SS0          | 49 (GPIO18) | 3.3V         | IC6 ADC SPI slave select (CM4/5 output)               |
  |           +-----------------------+-------------+--------------+-------------------------------------------------------+
  |           | RPI_SPI1_SS1          | 50 (GPIO17) | 3.3V         | IC18 FPGA SPI slave select (CM4/5 output)             |
  |           +-----------------------+-------------+--------------+-------------------------------------------------------+
  |           | RPI_SPI1_SS2          | 29 (GPIO16) | 3.3V         | IC18 FPGA SPI slave select (CM4/5 output)             |
  +-----------+-----------------------+-------------+--------------+-------------------------------------------------------+
  | I2C0      | RPI_I2C0_SCL          | 80          | 3.3V         | Serial Clock (CM4/5 output)                           |
  |           +-----------------------+-------------+--------------+-------------------------------------------------------+
  |           | RPI_I2C0_SDA          | 82          | 3.3V         | Data (CM4/5 input/output)                             |
  +-----------+-----------------------+-------------+--------------+-------------------------------------------------------+
  | UART0     | RPI_UART0_RX          | 51 (GPIO15) | 3.3V         | Data (CM4/5 input)                                    |
  |           +-----------------------+-------------+--------------+-------------------------------------------------------+
  |           | RPI_UART0_TX          | 55 (GPIO14) | 3.3V         | Data (CM4/5 output)                                   |
  +-----------+-----------------------+-------------+--------------+-------------------------------------------------------+

FPGA low speed interfaces signal names, I/O standards are listed in table 18.

.. table:: Table 18. FPGA low speed interfaces pins

  +-----------+-----------------------+--------------+--------------+--------------------------------------------------+
  | Interface | Schematic signal name | FPGA pin     | I/O standard | Comment                                          |
  +===========+=======================+==============+==============+==================================================+
  | CFG       | FPGA_CFG_SCK          | 15 (IOB_34A) | 3.3V         | Serial Clock (FPGA output)                       |
  |           +-----------------------+--------------+--------------+--------------------------------------------------+
  |           | FPGA_CFG_SO           | 14 (IOB_32A) | 3.3V         | FPGA configuration flash Data (FPGA input)       |
  |           +-----------------------+--------------+--------------+--------------------------------------------------+
  |           | FPGA_CFG_SI           | 17 (IOB_33B) | 3.3V         | FPGA configuration flash Data (FPGA output)      |
  |           +-----------------------+--------------+--------------+--------------------------------------------------+
  |           | FPGA_CFG_CSN          | 16 (IOB_35B) | 3.3V         | FPGA SPI slave select (FPGA input)               |
  +-----------+-----------------------+--------------+--------------+--------------------------------------------------+
  | SPI0      | FPGA_SPI0_SCLK        | 43 (IOT_49A) | 3.3V         | Serial Clock (FPGA output)                       |
  |           +-----------------------+--------------+--------------+--------------------------------------------------+
  |           | FPGA_SPI0_MOSI        | 38 (IOT_50B) | 3.3V         | Data (FPGA output)                               |
  |           +-----------------------+--------------+--------------+--------------------------------------------------+
  |           | FPGA_SPI0_DAC_SS      | 42 (IOT_51A) | 3.3V         | IC36/IC38 DAC SPI slave select (FPGA output)     |
  +-----------+-----------------------+--------------+--------------+--------------------------------------------------+
  | I2C0      | FPGA_I2C0_SCL         | 47 (IOB_2A)  | 3.3V         | Serial Clock (FPGA output)                       |
  |           +-----------------------+--------------+--------------+--------------------------------------------------+
  |           | FPGA_I2C0_SDA         | 48 (IOB_4A)  | 3.3V         | Data (FPGA input/output)                         |
  +-----------+-----------------------+--------------+--------------+--------------------------------------------------+
  | UART      | GNSS_UART_RX          | 51 (GPIO15)  | 3.3V         | Data (FPGA input)                                |
  |           +-----------------------+--------------+--------------+--------------------------------------------------+
  |           | GNSS_UART_TX          | 55 (GPIO14)  | 3.3V         | Data (FPGA output)                               |
  +-----------+-----------------------+--------------+--------------+--------------------------------------------------+

RPI_I2C0 (FPGA_I2C0) interface devices, addresses and other info are shown in table 19.

.. list-table:: Table 19. RPI_I2C0 interface devices
   :header-rows: 1

   * - RPI_I2C0 slave device
     - Slave device
     - I2C address
     - I/O standard
     - Comment
   * - IC9
     - Temperature sensor
     - 1001000 (R/W)
     - 3.3V
     - LM75
   * - IC10 (default) / IC11
     - EEPROM
     - 1010000 (R/W)
     - 3.3V
     - CAT24C128WI-GT3 / M24128
   * - IC13 / IC14
     - Secure key storage
     - 1100000 (R/W)
     - 3.3V
     - ATECC508A
   * - IC16 / IC18
     - RTC
     - 1010001 (R/W)
     - 3.3V
     - PCF85063AT
   * - IC12
     - FAN controller
     - 0101111 (R/W)
     - 3.3V
     - EMC2301
   * - IC51
     - USB PD controller
     - 0001000 (R/W)
     - 3.3V
     - CYPD3177-24LQXQT
   * - IC13
     - I/O expander
     - 0100000 (R/W)
     - 3.3V
     - MCP23017-E/ML
   * - IC20
     - USB 2.0 hub
     - 0101100 (R/W)
     - 3.3V
     - USB2517 (disabled)
